Bug 824390 - DMD: Don't use PTHREAD_MUTEX_INITIALIZER for non-static mutexes.  r=jlebar.

--HG--
extra : rebase_source : a8cdd5e3d3db05cbb78441477508c05168e67ecd